fix(header): mobile flyout toggle alignment

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -17,7 +17,7 @@
   height: var(--kd-header-height);
   background: var(--kd-color-neutral-webgray);
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
-  padding: 4px var(--kd-page-gutter);
+  padding: 4px calc(var(--kd-page-gutter) - 4px) 4px var(--kd-page-gutter);
   transition: z-index 150ms ease-out;
   z-index: var(--kd-z-header);
 
